--- a/languages/addsearch.pot
+++ b/languages/addsearch.pot
@@ -1,17 +1,16 @@
-# Copyright (C) 2015 AddSearch Ltd.
-# This file is distributed under the GPL-2.0+.
+# Copyright (C) 2015 AddSearch Instant Search
+# This file is distributed under the same license as the AddSearch Instant Search package.
 msgid ""
 msgstr ""
 "Project-Id-Version: AddSearch Instant Search 1.1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/addsearch\n"
-"POT-Creation-Date: 2014-12-07 08:31:59+00:00\n"
+"POT-Creation-Date: 2015-03-24 11:07:22+00:00\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"X-Generator: grunt-wp-i18n 0.4.5\n"
 
 #: addsearch.php:178
 msgid "Settings"
@@ -37,6 +36,13 @@ msgstr ""
 msgid "Your Site Key"
 msgstr ""
 
+#: admin/settings.php:56
+msgctxt "%s stands for function get_search_form()"
+msgid ""
+"Enter your Site Key. This will replace all search forms in your site with "
+"Addsearch. This means all instances off %s."
+msgstr ""
+
 #: admin/settings.php:68
 msgid "About Addsearch"
 msgstr ""
@@ -48,29 +54,52 @@ msgid ""
 msgstr ""
 
 #: admin/settings.php:72
-msgid "Open the confirmation e-mail, and from the bottom, copy your Site Key."
+msgid ""
+"Log in to your Dashboard and copy your Site Key from the installation page"
 msgstr ""
 
 #: admin/settings.php:73
+msgid ""
+"As a Wordpress user you are entitled to a special free plan in addition to "
+"premium plans. Contact support@addsearch.com to get the free plan activated"
+msgstr ""
+
+#: admin/settings.php:74
 msgid ""
 "Come back to this page in WordPress. Paste your Site Key above and click "
 "<strong>Save Changes</strong>."
 msgstr ""
 
-#: admin/settings.php:74
+#: admin/settings.php:75
 msgid ""
 "Go to <strong>Appearance &rarr; Widgets</strong>. Drag the WordPress native "
 "Search Widget to your preferred widget area."
 msgstr ""
 
-#: admin/settings.php:75
+#: admin/settings.php:76
 msgid ""
 "If your theme have search somewhere else, it will automatically be replaced "
 "by Addsearch."
 msgstr ""
 
-#: admin/settings.php:76
+#: admin/settings.php:77
 msgid "You're done - congrats! :)"
+msgstr ""
+
+#: includes/functions.php:31 includes/functions.php:32
+#: includes/functions.php:39
+msgctxt "label"
+msgid "Search for:"
+msgstr ""
+
+#: includes/functions.php:32
+msgctxt "placeholder"
+msgid "Search &hellip;"
+msgstr ""
+
+#: includes/functions.php:34 includes/functions.php:41
+msgctxt "submit button"
+msgid "Search"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
@@ -91,27 +120,4 @@ msgstr ""
 
 #. Author URI of the plugin/theme
 msgid "http://www.addsearch.com/"
-msgstr ""
-
-#: admin/settings.php:56
-msgctxt "%s stands for function get_search_form()"
-msgid ""
-"Enter your Site Key. This will replace all search forms in your site with "
-"Addsearch. This means all instances off %s."
-msgstr ""
-
-#: includes/functions.php:31 includes/functions.php:32
-#: includes/functions.php:39
-msgctxt "label"
-msgid "Search for:"
-msgstr ""
-
-#: includes/functions.php:32
-msgctxt "placeholder"
-msgid "Search &hellip;"
-msgstr ""
-
-#: includes/functions.php:34 includes/functions.php:41
-msgctxt "submit button"
-msgid "Search"
 msgstr ""
